--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -142,9 +142,27 @@
             resize: both;
             overflow: auto;
         }
+        .logout-button {
+            position: absolute;
+            top: 15px;
+            right: 15px;
+            padding: 10px 15px;
+            background-color: #ff4d4d;
+            color: white;
+            text-decoration: none;
+            font-size: 16px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .logout-button:hover {
+            background-color: #d9534f;
+        }
+
     </style>
 </head>
 <body>
+<a href="/logout" class="logout-button">Выйти</a>
 <div class="container">
     <div class="note-list">
         <h2>Список Заметок</h2>
